# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-2f6afc3badd4bc6b8871812850dec7bcaf9da43bafa9d0c511efa97320321587.json
configuration/: base.yaml
migrations/: 20231031014159_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: heath_check.rs
